// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList-bottom matches the snapshot - alignBottom 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-root-109 makeStyles-alignBottom-111 MuiGrid-item"
  >
    <button
      type="submit"
    >
      Test1
    </button>
    <button
      type="submit"
    >
      Test2
    </button>
    <button
      type="submit"
    >
      Test3
    </button>
  </div>
</div>
`;

exports[`ButtonList-top matches the snapshot - alignTop 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-root-1 makeStyles-alignTop-2 MuiGrid-item"
  >
    <button
      type="submit"
    >
      Test1
    </button>
    <button
      type="submit"
    >
      Test2
    </button>
    <button
      type="submit"
    >
      Test3
    </button>
  </div>
</div>
`;
